--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_bloc: ^3.2.0
+  dio: ^3.0.9
+  moor: ^2.4.2
+  shared_preferences: ^0.5.6+3
+  google_fonts: ^0.3.10
+  equatable: ^1.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
