--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,11 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^3.2.0
   dio: ^3.0.9
-  moor: ^2.4.2
+  sqflite: ^1.3.0
   shared_preferences: ^0.5.6+3
   google_fonts: ^0.3.10
   equatable: ^1.1.1
+  path_provider: ^1.6.5
   flutter_localizations:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
