--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   google_fonts: ^0.3.10
   equatable: ^1.1.1
-  path_provider: ^1.6.5
+  connectivity: ^0.4.8+2
   flutter_localizations:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
