--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   google_fonts: ^0.3.10
   equatable: ^1.1.1
   connectivity: ^0.4.8+2
+  flag: ^1.0.3
   flutter_localizations:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
