connectivity problem is solved with facade and strategy pattern

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flag: ^1.0.3
   flutter_localizations:
     sdk: flutter
+  device_preview: ^0.4.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
