--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,17 +19,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^3.2.0
-  dio: ^3.0.9
-  sqflite: ^1.3.0
-  shared_preferences: ^0.5.6+3
-  google_fonts: ^0.3.10
-  equatable: ^1.1.1
-  connectivity: ^0.4.8+2
-  flag: ^1.0.3
+  flutter_bloc: ^5.0.1 
+  dio: ^3.0.9 
+  sqflite: ^1.3.1
+  shared_preferences: ^0.5.8 
+  google_fonts: ^1.1.0
+  equatable: ^1.2.0 
+  connectivity: ^0.4.9 
+  flag: ^3.0.1
   flutter_localizations:
     sdk: flutter
-  device_preview: ^0.4.4
+  device_preview: 
+  rxdart: ^0.24.1  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
